--- a/client/src/App.css
+++ b/client/src/App.css
@@ -36,3 +36,11 @@
     transform: rotate(360deg);
   }
 }
+.landingpage{
+  text-align: center;
+  color: blue;
+  font-weight: 400;
+  font-size: 35px;
+  font-style: oblique;
+  /* background-color: darkblue; */
+}
